--- a/message_app/templates/message_app/index.html
+++ b/message_app/templates/message_app/index.html
@@ -1,20 +1,18 @@
-<html>
-<head>
-
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
-<head>
-<body>
 {% load staticfiles %}
+<html>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="{% static 'css/index.css' %}">
+	</head>
+	<body>
 
-<h1>Message board homepage</h1>
-<ul>
-  {% for post in object_list %}
-    <li>{{ post }}</li>
-  {% endfor %}
-</ul>
-
-
-</body
+		<h1>Message board homepage</h1>
+			<ul>
+			  {% for post in object_list %}
+			    <li>{{ post }}</li>
+			  {% endfor %}
+			</ul>
+	</body
 </html>
