--- a/message_app/templates/message_app/index.html
+++ b/message_app/templates/message_app/index.html
@@ -2,13 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="{% static 'css/index.css' %}">
+		<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	</head>
 	<body>
 
 		<h1>Message board homepage</h1>
+		<h2>This is a simple textboard...</h2>
 			<ul>
 			  {% for post in object_list %}
 			    <li>{{ post }}</li>
